@@ -41,6 +41,18 @@ struct compat_socket_selfpipe_t {
   int write_fd;
 };
 
+void
+compat_socket_networking_init( void )
+{
+  /* No action necessary */
+}
+
+void
+compat_socket_networking_end( void )
+{
+  /* No action necessary */
+}
+
 int
 compat_socket_close( compat_socket_t fd )
 {
